--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!doctype HTML>
 <html>
-<script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
+  <head>
+    <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+    <script src="https://rawgit.com/chenzlabs/auto-detect-controllers/master/dist/aframe-auto-detect-controllers-component.min.js"></script> 
+  </head>
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
       <a-marker preset="hiro">
@@ -11,6 +14,9 @@
               <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
               <a-sky color="#ECECEC"></a-sky>
       </a-marker>
+      <!-- If detected, will use built-in controller model -->
+      <a-entity id="lefthand" auto-detect-controllers="hand:left"></a-entity>
+      <a-entity id="righthand" auto-detect-controllers="hand:right"></a-entity>
       <a-entity camera></a-entity>
     </a-scene>
   </body>
