--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
     <script src="https://rawgit.com/chenzlabs/auto-detect-controllers/master/dist/aframe-auto-detect-controllers-component.min.js"></script> 
+	<script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
