--- a/index.html
+++ b/index.html
@@ -1,24 +1,9 @@
 <!doctype HTML>
 <html>
   <head>
-    <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
-    <script src="https://rawgit.com/chenzlabs/auto-detect-controllers/master/dist/aframe-auto-detect-controllers-component.min.js"></script> 
-	<script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body style='margin : 0px; overflow: hidden;'>
-    <a-scene embedded arjs>
-      <a-marker preset="hiro">
-              <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-              <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-              <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-              <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-              <a-sky color="#ECECEC"></a-sky>
-      </a-marker>
-      <!-- If detected, will use built-in controller model -->
-      <a-entity id="lefthand" auto-detect-controllers="hand:left"></a-entity>
-      <a-entity id="righthand" auto-detect-controllers="hand:right"></a-entity>
-      <a-entity camera></a-entity>
-    </a-scene>
+	<a href="ar.html">AR</a>
+	<a href="plot.html">Plot</a>
   </body>
 </html>
