--- a/plot.html
+++ b/plot.html
@@ -36,7 +36,7 @@
         cursor: move;
       }
     </style>
-    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <script>
@@ -77,12 +77,12 @@
         .attr("d", path);
 
         // Add blue foreground lines for focus.
-        /*foreground = svg.append("g")
+        foreground = svg.append("g")
         .attr("class", "foreground")
         .selectAll("path")
         .data(cars)
         .enter().append("path")
-        .attr("d", path);*/
+        .attr("d", path);
 
         // Add a group element for each dimension.
         var g = svg.selectAll(".dimension")
