--- a/testplot.html
+++ b/testplot.html
@@ -5,18 +5,35 @@
   </head>
   <body style='margin : 0px; overflow: hidden;'>
     <script>
-      d3.csv("cars.csv", function(d) {
-        return {
-          name : d.name,
-          cylinders : +d.cylinders,
-          displacement = +d["displacement (cc)"],
-          power = +d["power (hp)"],
-          weight = +d["weight (lb)"],
-          "0-60" = +d["0-60 mph (s)"]
-        };
-      }, function(data){
 
-      })
+    var svg = d3.select("body").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+    d3.csv("cars.csv", function(d) {
+        return{
+          name: d.name,
+          cylinders: +d.cylinders,
+          displacement: +d["displacement (cc)"],
+          power: +d["power (hp)"],
+          weight: +d["weight (lb)"],
+          speed: +d["0-60 mph (s)"],
+          year: +d.year
+        };
+      }, function(error, rows) {
+
+
+          foreground = svg.append("g")
+          .attr("class", "foreground")
+          .selectAll("path")
+          .data(cars)
+          .enter().append("path")
+          .attr("d", path);
+
+
+        });
     </script>
   </body>
 </html>
