--- a/testplot.html
+++ b/testplot.html
@@ -6,6 +6,8 @@
   <body style='margin : 0px; overflow: hidden;'>
     <script>
 
+    var foreground;
+
     var svg = d3.select("body").append("svg")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
