--- a/testplot.html
+++ b/testplot.html
@@ -14,6 +14,7 @@
     .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
+/*
     d3.text("cars.csv", function(d) {
         return{
           name: d.name,
@@ -36,6 +37,38 @@
 
 
         });
+        */
+
+      d3.csv("cars.csv", function(cars) {
+        console.log("cars:", cars)
+        data = cars.map(function(d) {
+          console.log("d", d)
+          name = d.name
+          cylinders = +d.cylinders
+          displacement = +d["displacement (cc)"]
+          power = +d["power (hp)"]
+          weight = +d["weight (lb)"]
+          speed = +d["0-60 mph (s)"]
+          year = +d.year
+          return {
+            "name": d.name,
+            "cylinders": +d.cylinders,
+            "displacement": +d["displacement (cc)"],
+            "power": +d["power (hp)"],
+            "weight": +d["weight (lb)"],
+            "speed": +d["0-60 mph (s)"],
+            "year": +d.year
+          }
+        })
+        console.log("data", data)
+
+        foreground = svg.append("g")
+        .attr("class", "foreground")
+        .selectAll("path")
+        .data(cars)
+        .enter().append("path")
+        .attr("d", path);
+      })
     </script>
   </body>
 </html>
