--- a/testplot.html
+++ b/testplot.html
@@ -6,6 +6,19 @@
   <body style='margin : 0px; overflow: hidden;'>
     <script>
 
+    var margin = {top: 30, right: 10, bottom: 10, left: 10},
+        width = 960 - margin.left - margin.right,
+        height = 500 - margin.top - margin.bottom;
+
+    var x = d3.scale.ordinal().rangePoints([0, width], 1),
+        y = {},
+        dragging = {};
+
+    var line = d3.svg.line(),
+        axis = d3.svg.axis().orient("left"),
+        background,
+        foreground;
+
     var foreground;
 
     var svg = d3.select("body").append("svg")
