--- a/testplot.html
+++ b/testplot.html
@@ -10,9 +10,7 @@
         width = 960 - margin.left - margin.right,
         height = 500 - margin.top - margin.bottom;
 
-    var line = d3.svg.line(),
-        axis = d3.svg.axis().orient("left"),
-        background,
+    var background,
         foreground;
 
     var foreground;
