--- a/testplot.html
+++ b/testplot.html
@@ -11,8 +11,7 @@
         height = 500 - margin.top - margin.bottom;
 
 
-    var background;
-    var foreground;
+    var background, foreground;
 
     var svg = d3.select("body").append("svg")
     .attr("width", width + margin.left + margin.right)
