--- a/testplot.html
+++ b/testplot.html
@@ -76,6 +76,11 @@
         .enter().append("path")
         .attr("d", path);
       })
+
+      // Returns the path for a given data point.
+      function path(d) {
+        return line(dimensions.map(function(p) { return [position(p), y[p](d[p])]; }));
+      }
     </script>
   </body>
 </html>
