--- a/testplot.html
+++ b/testplot.html
@@ -10,7 +10,7 @@
         width = 960 - margin.left - margin.right,
         height = 500 - margin.top - margin.bottom;
 
-
+    var line = d3.svg.line();
     var background, foreground;
 
     var svg = d3.select("body").append("svg")
