--- a/testplot.html
+++ b/testplot.html
@@ -48,7 +48,7 @@
         y = {},
         dragging = {};
 
-    var line = d3.line();
+    var line = d3.svg.line();
     var background, foreground;
 
     var svg = d3.select("body").append("svg")
