--- a/testplot.html
+++ b/testplot.html
@@ -126,6 +126,11 @@
       function path(d) {
         return line(dimensions.map(function(p) { return [position(p), y[p](d[p])]; }));
       }
+
+      function position(d) {
+        var v = dragging[d];
+        return v == null ? x(d) : v;
+      }
     </script>
   </body>
 </html>
