--- a/ar.html
+++ b/ar.html
@@ -9,11 +9,10 @@
   <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
       <a-marker preset="hiro">
-              <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-              <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-              <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-              <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-              <a-sky color="#ECECEC"></a-sky>
+              <a-entity
+                obj-model="obj: url(object.obj);
+                mtl: url(object.mtl)">
+              </a-entity>
       </a-marker>
       <!-- If detected, will use built-in controller model -->
       <a-entity id="lefthand" auto-detect-controllers="hand:left"></a-entity>
