--- a/testplot.html
+++ b/testplot.html
@@ -133,6 +133,11 @@
       */
 
     })
+
+    // Returns the path for a given data point.
+    function path(d) {
+      return line(dimensions.map(function(p) { return [position(p), y[p](d[p])]; }));
+    }
   </script>
 </body>
 
