--- a/testplot.html
+++ b/testplot.html
@@ -83,7 +83,7 @@
         }
       })
 
-      x.domain(dimensions = d3.keys(cars[0]) // get column names
+      x.domain(dimensions = d3.keys(cars[0]) // get column names (leaving as global)
         .filter(function(column_name) {
           return column_name != "name" && (y[column_name] = d3.scale.linear() // Discard names
             .domain(d3.extent(cars, function(max_values) { // create scale from max column values
@@ -136,6 +136,11 @@
     // Returns the path for a given data point.
     function path(d) {
       return line(dimensions.map(function(p) { return [position(p), y[p](d[p])]; }));
+    }
+    
+    function position(d) {
+      var v = dragging[d];
+      return v == null ? x(d) : v;
     }
   </script>
 </body>
