--- a/testplot.html
+++ b/testplot.html
@@ -55,11 +55,13 @@
     var line = d3.svg.line();
     var background, foreground;
 
-    var svg = d3.select("body").append("svg")
+    /*var svg = d3.select("body").append("svg")
       .attr("width", width + margin.left + margin.right)
       .attr("height", height + margin.top + margin.bottom)
       .append("g")
-      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");*/
+
+    var scene = d3.select("a-scene");
 
     d3.csv("cars.csv", function(cars) {
       console.log("cars:", cars)
@@ -92,6 +94,8 @@
             .range([height, 0]))
         }));
 
+      var coords = dimensions.map(function(column_name) { return [x(column_name), y[column_name](d[column_name])]; });
+      console.log("coords", coords);
       foreground = svg.append("g")
       .attr("class", "foreground")
       .selectAll("path")
@@ -99,48 +103,27 @@
       .enter().append("path")
       .attr("d", path);
 
-      /*console.log("data", data)
-      data.forEach(function(d) {
-
-      })*/
-
-      /*
-        // Extract the list of dimensions and create a scale for each.
-        x.domain(dimensions = d3.keys(cars[0]).filter(function(d) {
-          return d != "name" && (y[d] = d3.scale.linear()
-              .domain(d3.extent(cars, function(p) { return +p[d]; }))
-              .range([height, 0]));
-        }));
-
-        foreground = svg.append("g")
-        .attr("class", "foreground")
-        .selectAll("path")
-        .data(cars)
-        .enter().append("path")
-        .attr("d", path);
-      })
-
-      // Returns the path for a given data point.
-      function path(d) {
-        return line(dimensions.map(function(p) { return [position(p), y[p](d[p])]; }));
-      }
-
-      function position(d) {
-        var v = dragging[d];
-        return v == null ? x(d) : v;
-      }
-      */
+/*
+      var lines = scene.selectAll("a-entity")
+       .data(data)
+       .enter()
+       .append("a-entity")
+        .each(function(d) {
+          // Select itself
+          var entity = d3.select(this);
+          var coordinates = dimensions.map(function(column_name) { return [x(column_name), y[column_name](d[column_name])]; });
+          // Loop for each dimension
+          for (i = 0; i < coordinates.length - 1; i++) {
+            entity.attr("line__" + (i + 1), "start: ")
+          }
+          })
+        })
 
     })
-
+*/
     // Returns the path for a given data point.
     function path(d) {
-      return line(dimensions.map(function(p) { return [position(p), y[p](d[p])]; }));
-    }
-    
-    function position(d) {
-      var v = dragging[d];
-      return v == null ? x(d) : v;
+      return line(dimensions.map(function(column_name) { return [x(column_name), y[column_name](d[column_name])]; }));
     }
   </script>
 </body>
