removed svg elements

--- a/testplot.html
+++ b/testplot.html
@@ -99,13 +99,13 @@
     });
     console.log("coords", coords);
 
-    foreground = svg.append("g")
+    /*foreground = svg.append("g")
       .attr("class", "foreground")
       .selectAll("path")
       .data(cars)
       .enter().append("path")
       .attr("d", path);
-
+*/
 
     var lines = scene.selectAll("a-entity")
       .data(data)
@@ -128,12 +128,12 @@
 
 
     })
-    // Returns the path for a given data point.
+    /*// Returns the path for a given data point.
     function path(d) {
       return line(dimensions.map(function(column_name) {
         return [x(column_name), y[column_name](d[column_name])];
       }));
-    }
+    }*/
   </script>
   <a-scene></a-scene>
 </body>
