--- a/testplot.html
+++ b/testplot.html
@@ -65,32 +65,32 @@
 
     d3.csv("cars.csv", function(cars) {
 
-    x.domain(dimensions = d3.keys(cars[0]) // get column names (leaving as global)
-      .filter(function(column_name) {
-        return column_name != "name" && (y[column_name] = d3.scale.linear() // Discard names
-          .domain(d3.extent(cars, function(max_values) { // create scale from max column values
-            return +max_values[column_name]
-          }))
-          .range([height, 0]))
-      }));
-
-    var lines = scene.selectAll("a-entity")
-      .data(cars)
-      .enter()
-      .append("a-entity")
-      .each(function(datum, index) {
-        // Select itself
-        var entity = d3.select(this);
-        var coordinates = dimensions.map(function(column_name) {
-          return [x(column_name), y[column_name](datum[column_name])];
-        });
-        // Loop for each dimension
-        for (i = 0; i < coordinates.length - 1; i++) {
-          entity.attr("line__" + (i + 1), "start: " + coordinates[i][0] + " " + coordinates[i][1] +
-            " 0; end: " + coordinates[i + 1][0] + " " + coordinates[i + 1][1] +
-            " 0; color: red");
-        }
-      })
+      x.domain(dimensions = d3.keys(cars[0]) // get column names (leaving as global)
+        .filter(function(column_name) {
+          return column_name != "name" && (y[column_name] = d3.scale.linear() // Discard names
+            .domain(d3.extent(cars, function(max_values) { // create scale from max column values
+              return +max_values[column_name]
+            }))
+            .range([height, 0]))
+        }));
+      scene.append("a-camera");
+      var lines = scene.selectAll("a-entity")
+        .data(cars)
+        .enter()
+        .append("a-entity")
+        .each(function(datum, index) {
+          // Select itself
+          var entity = d3.select(this);
+          var coordinates = dimensions.map(function(column_name) {
+            return [x(column_name), y[column_name](datum[column_name])];
+          });
+          // Loop for each dimension
+          for (i = 0; i < coordinates.length - 1; i++) {
+            entity.attr("line__" + (i + 1), "start: " + coordinates[i][0] + " " + coordinates[i][1] +
+              " 0; end: " + coordinates[i + 1][0] + " " + coordinates[i + 1][1] +
+              " 0; color: red");
+          }
+        })
 
     })
   </script>
