--- a/testplot.html
+++ b/testplot.html
@@ -65,7 +65,7 @@
             }))
             .range([height, 0]))
         }));
-      scene.append("a-camera");
+      //scene.append("a-camera");
       var lines = d3.select("a-scene").selectAll("a-entity")
         .data(cars)
         .enter()
