--- a/testplot.html
+++ b/testplot.html
@@ -1,43 +1,11 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<style>
-  svg {
-    font: 10px sans-serif;
-  }
-
-  .background path {
-    fill: none;
-    stroke: #ddd;
-    shape-rendering: crispEdges;
-  }
-
-  .foreground path {
-    fill: none;
-    stroke: steelblue;
-  }
-
-  .brush .extent {
-    fill-opacity: .3;
-    stroke: #fff;
-    shape-rendering: crispEdges;
-  }
-
-  .axis line,
-  .axis path {
-    fill: none;
-    stroke: #000;
-    shape-rendering: crispEdges;
-  }
-
-  .axis text {
-    text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
-    cursor: move;
-  }
-</style>
-
-<body style='margin : 0px; overflow: hidden;'>
+<head>
   <script src="https://d3js.org/d3.v3.min.js"></script>
   <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+</head>
+<body style='margin : 0px; overflow: hidden;'>
+
   <script>
     var margin = {
         top: 30,
@@ -77,11 +45,13 @@
           var coordinates = dimensions.map(function(column_name) {
             return [x(column_name), y[column_name](datum[column_name])];
           });
+          console.log("coords", coordinates);
           // Loop for each dimension
           for (i = 0; i < coordinates.length - 1; i++) {
-            entity.attr("line__" + (i + 1), "start: " + coordinates[i][0] + " " + coordinates[i][1] +
+            var value = "start: " + coordinates[i][0] + " " + coordinates[i][1] +
               " 0; end: " + coordinates[i + 1][0] + " " + coordinates[i + 1][1] +
-              " 0; color: red");
+              " 0; color: red";
+            entity.attr("line__" + (i + 1), value);
           }
         })
 
@@ -91,5 +61,4 @@
     <a-entity camera></a-entity>
   </a-scene>
 </body>
-
 </html>
