--- a/testplot.html
+++ b/testplot.html
@@ -50,9 +50,9 @@
           console.log("coords", coordinates);
           // Loop for each dimension
           for (i = 0; i < coordinates.length - 1; i++) {
-            var value = "start: " + coordinates[i][0] + " " + coordinates[i][1] +
-              " 0; end: " + coordinates[i + 1][0] + " " + coordinates[i + 1][1] +
-              " 0; color: red";
+            var value = "start: 0 " + coordinates[i][1] + " " + coordinates[i][0] +
+              "; end: 0 " + coordinates[i + 1][1] + " " + + coordinates[i + 1][0] +
+              "; color: red";
             console.log("lines", value);
             entity.attr("line__" + (i + 1), value);
           }
