--- a/testplot.html
+++ b/testplot.html
@@ -26,6 +26,9 @@
     var line = d3.svg.line();
     var background, foreground;
 
+    var offsetx = 50;
+    var offsetz = 500;
+
     d3.csv("cars.csv", function(cars) {
 
       x.domain(dimensions = d3.keys(cars[0]) // get column names (leaving as global)
@@ -36,7 +39,7 @@
             }))
             .range([height, 0]))
         }));
-      //scene.append("a-camera");
+
       var lines = d3.select("a-scene").selectAll("a-entity")
         .data(cars)
         .enter()
@@ -50,8 +53,8 @@
           console.log("coords", coordinates);
           // Loop for each dimension
           for (i = 0; i < coordinates.length - 1; i++) {
-            var value = "start: 0 " + coordinates[i][1] + " " + coordinates[i][0] +
-              "; end: 0 " + coordinates[i + 1][1] + " " + + coordinates[i + 1][0] +
+            var value = "start: " + offsetx + " " + coordinates[i][1] + " " + (coordinates[i][0] + offsetz) +
+              "; end: " + offsetx + " " + coordinates[i + 1][1] + " " + (coordinates[i + 1][0] + offsetz) +
               "; color: red";
             console.log("lines", value);
             entity.attr("line__" + (i + 1), value);
