--- a/testplot.html
+++ b/testplot.html
@@ -9,14 +9,8 @@
 <body style='margin : 0px; overflow: hidden;'>
 
   <script>
-    var margin = {
-        top: 30,
-        right: 10,
-        bottom: 10,
-        left: 10
-      },
-      width = 960 - margin.left - margin.right,
-      height = 500 - margin.top - margin.bottom;
+    var width = 960,
+      height = 500;
 
     var x = d3.scale.ordinal()
       .rangePoints([0, width], 1),
@@ -61,10 +55,35 @@
           }
         })
 
+        var plane = d3.select("a-scene")
+          .append("a-plane")
+          .attr("position", offsetx + " " + 0 + " " + x(dimensions[0]))
+          .attr("height", height)
+          .attr("width", width);
+
     })
+
+    AFRAME.registerComponent('drag-selection', {
+      init: function() {
+        var downPosition = new THREE.Vector3();
+        var upPosition = new THREE.Vector3();
+        this.el.addEventListener('mousedown', function(evt) {
+          console.log(evt.detail.intersection);
+          downPosition = evt.detail.intersection.point;
+          console.log("down", downPosition);
+        });
+        this.el.addEventListener('mouseup', function(evt) {
+          console.log(evt.detail.intersection);
+          upPosition = evt.detail.intersection.point;
+          console.log("up", upPosition);
+        });
+      }
+    });
   </script>
   <a-scene>
-    <a-camera look-controls wasd-controls='easing:10'></a-camera>
+    <a-camera look-controls wasd-controls='easing:10'>
+      <a-cursor></a-cursor>
+    </a-camera>
     <a-sky color='#4CC3D9' fuse timeout='100'></a-sky>
   </a-scene>
 </body>
