--- a/testplot.html
+++ b/testplot.html
@@ -4,6 +4,7 @@
 <head>
   <script src="https://d3js.org/d3.v3.min.js"></script>
   <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+  <script src="https://raw.githubusercontent.com/cemkod/aframe-fps-look-component/master/dist/aframe-example-component.min.js"></script>
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
@@ -81,7 +82,7 @@
     });
   </script>
   <a-scene>
-    <a-camera look-controls wasd-controls='easing:10'>
+    <a-camera fps-look-controls wasd-controls='easing:10'>
       <a-cursor></a-cursor>
     </a-camera>
     <a-sky color='#4CC3D9' fuse timeout='100'></a-sky>
