--- a/testplot.html
+++ b/testplot.html
@@ -82,7 +82,7 @@
     });
   </script>
   <a-scene>
-    <a-camera fps-look-controls wasd-controls='easing:10'>
+    <a-camera no-click-look-controls wasd-controls='easing:10'>
       <a-cursor></a-cursor>
     </a-camera>
     <a-sky color='#4CC3D9' fuse timeout='100'></a-sky>
