--- a/testplot.html
+++ b/testplot.html
@@ -4,7 +4,6 @@
 <head>
   <script src="https://d3js.org/d3.v3.min.js"></script>
   <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-  <script src="https://raw.githubusercontent.com/alexrkass/aframe-no-click-look-controls/master/dist/aframe-no-click-look-controls.min.js"></script>
 </head>
 
 <body style='margin : 0px; overflow: hidden;'>
@@ -82,7 +81,7 @@
     });
   </script>
   <a-scene>
-    <a-camera no-click-look-controls wasd-controls='easing:10'>
+    <a-camera look-controls wasd-controls='easing:10'>
       <a-cursor></a-cursor>
     </a-camera>
     <a-sky color='#4CC3D9' fuse timeout='100'></a-sky>
