fixed for loops

--- a/testplot.html
+++ b/testplot.html
@@ -57,7 +57,7 @@
       });
 
       // Generate Lines
-      for (int i = 0; i < dimensions.length - 2; i++) {
+      for (i = 0; i < dimensions.length - 2; i++) {
         generateLines(i);
       }
 
@@ -222,7 +222,7 @@
                         // Middle section
                         // Update 3 sectors
                         // sectors (positionOrder - 1), positionOrder, (positionOrder + 1)
-                        for (int i = (positionOrder - 1); i < positionOrder + 2; i++){
+                        for (i = (positionOrder - 1); i < positionOrder + 2; i++){
                           generateLines(i);
                         }
                       }
@@ -250,7 +250,7 @@
                         // Middle section
                         // Update 3 sectors
                         // sectors (positionOrder - 1), positionOrder, (positionOrder + 1)
-                        for (int i = (positionOrder - 1); i < positionOrder + 2; i++){
+                        for (i = (positionOrder - 1); i < positionOrder + 2; i++){
                           generateLines(i);
                         }
                       }
