--- a/testplot.html
+++ b/testplot.html
@@ -169,7 +169,7 @@
         var material;
 
         material = this.material = new THREE.LineBasicMaterial({
-          color: data.colour;
+          color: data.colour,
           opacity: 1,
           transparent: 0,
           visible: true
@@ -301,7 +301,7 @@
         var material;
 
         material = this.material = new THREE.LineBasicMaterial({
-          color: data.colour;
+          color: data.colour,
           opacity: 1,
           transparent: 0,
           visible: true
