fixed more errors

--- a/testplot.html
+++ b/testplot.html
@@ -227,7 +227,7 @@
                         }
                       }
                     }
-              } else (nextAxis) {
+              } else if (nextAxis) {
                 // Check if after next axis
                 if (data.positionX > nextAxis.attr("positionX") ||
                     data.positionY > nextAxis.attr("positionY")) {
