--- a/testplot.html
+++ b/testplot.html
@@ -289,7 +289,7 @@
     AFRAME.registerComponent('datum', {
       schema: {
         colour: {default: '#FFF'},
-        sector: {type: 'int', default = 0},
+        sector: {type: 'int', default: 0},
         thickness: {type: 'int', default: 1},
         firstCoord: {type: 'vec3', default: {x: 0, y: 0, z: 0},
         secondCoord: {type: 'vec3', default: {x: 0, y: 0, z: 0}}
