hopefully the last error

--- a/testplot.html
+++ b/testplot.html
@@ -296,7 +296,7 @@
         colour: {default: '#FFF'},
         sector: {type: 'int', default: 0},
         thickness: {type: 'int', default: 1},
-        firstCoord: {type: 'vec3', default: {x: 0, y: 0, z: 0},
+        firstCoord: {type: 'vec3', default: {x: 0, y: 0, z: 0}},
         secondCoord: {type: 'vec3', default: {x: 0, y: 0, z: 0}}
       },
 
